# CMakeLibrary

./: .gitignore  CMakeLists.txt  Readme.md  configure.py  installation_tests.ps1  installation_tests.sh  release.ps1  release.sh
cmake/: my_libraryConfig.cmake.in
examples/: CMakeLists.txt
examples/example_01/: CMakeLists.txt  main.cpp
include/my_library/: my_library.h  my_library_export.h
installation_tests/: CMakeLists.txt
my_library/: CMakeLists.txt
my_library/internal/: my_library_internal.h
my_library/source/: my_library.cpp  my_library_internal.cpp
tests/: CMakeLists.txt  example_01.cpp
tests/my_libraryTests/: CMakeLists.txt  versionTests.cpp
